Fixxed an spacing bug, and defined all classes or ids in the stylesheet. Next comes more Images, maybe such a cool rotating image band with some of my projekts and at least a Contact Page. Lets see what i am still making.

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -60,8 +60,17 @@ header {
     color: burlywood;
 }
 
-.normaltext{
-        font-size: 15px;
+.normalText{
+    font-size: 15px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: cyan;
+    color: rgb(45, 255, 4);
+
+    height: 0.75cm;
+    width: 40cm;
+
+    border-radius: 5px;
+}
+
+.spacer{
+    height: 250px;
 }
